# MyStats

./: .gitignore  .pre-commit-config.yaml  justfile  shell.nix
.github/workflows/: ci.yml
backend/: .gitignore  Cargo.toml  deny.toml  rustfmt.toml
backend/.sqlx/: query-01ba3b56ebfc607dd04d80847d8e437a83fba86200f8dfbefd9f8f69fccdc957.json  query-6a7473232ebdf48f7e4f45d3a1a9e124a8aab57d238d654f69aec6b39702aa34.json  query-9683bd8ac7cc6d5a03c341683c315b40b0aeef601036f947d6d835e83ef91366.json  query-9c4b2c45421faab98cd52db5da8d4773aaea8395c3b6adf52af0ab1bf2c9c7b6.json  query-c51812336d089d8951d9e51bb4b288cdd7dfa4cafc97e32c0d14a5f8f2f0e2f5.json  query-d6bd57b005b1f42a097d62db8b2243526442fa64f58bd0e27c7b91e7b1e56550.json
backend/migrations/: 2026032200000_init_stats.sql  2026032300000_sleep_stats.sql  2026032300001_add_steps_calories.sql  2026032300002_add_rhr_step_goal.sql
backend/src/: handlers.rs  main.rs  models.rs
backend/src/services/: garmin.rs  mod.rs
frontend/: .gitignore  eslint.config.js  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: ActivityGauges.vue  HistoricalChart.vue  Sidebar.vue  SleepChart.vue  TopNav.vue  WeeklyStatsCard.vue
